Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextBoolObjField.quorum
class Main
    text v = Test()
    action Main
    end

    action Test() returns text
        Boolean var
        var:SetValue(true)
        return var
    end
end